templates API
